# KSE-rocket-science-club

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_first_DL_model.ipynb  README.md
