[project]
name = "kse-rocket-science-club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "ipykernel>=6.30.1",
    "jupyter-collaboration>=4.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    # this guy will take a out a lot of space (3.33 GiB) consider using google colab
    "torch>=2.8.0",
]

[tool.uv.sources]
torch = { index = "torch-cu129" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "torch-cu129"
url = "https://download.pytorch.org/whl/cu129"

## Better use CLI to set the index strategy
## uv add torch --index-strategy unsafe-best-match
[tool.uv]
index-strategy = "unsafe-best-match"
